js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-function-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
function
fn
(
)
{
import
.
source
(
'
<
module
source
>
'
)
;
}
reportCompare
(
0
0
)
;
